...
                                    <constraint firstAttribute="height" constant="60" id="qPD-IG-W4U"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Tn-xL-YIz" userLabel="Login Button">
                                <rect key="frame" x="16" y="714" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate">
                                    <accessibilityTraits key="traits" button="YES"/>
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="HVM-yH-uxR"/>
                                </constraints>
...
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zxi-0I-Gvk" userLabel="Favorite Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="favoriteButton">
                                                        <accessibilityTraits key="traits" button="YES"/>
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="favorite_active"/>
                                                    <connections>
...
